--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,20 +49,20 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
       signingConfigs {
        release {
-           keyAlias keystoreProperties['keyAlias']
-           keyPassword keystoreProperties['keyPassword']
-           storeFile file(keystoreProperties['storeFile'])
-           storePassword keystoreProperties['storePassword']
-       }
+//           keyAlias keystoreProperties['keyAlias']
+//           keyPassword keystoreProperties['keyPassword']
+//           storeFile file(keystoreProperties['storeFile'])
+//           storePassword keystoreProperties['storePassword']
+//       }
    }
    buildTypes {
-       release {
-          signingConfig signingConfigs.release
+//       release {
+//          signingConfig signingConfigs.release
+//
+            // minifyEnabled true
+            // useProguard true
 
-            minifyEnabled true
-            useProguard true
-
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
 }
